--- a/frontend/style.css
+++ b/frontend/style.css
@@ -31,111 +31,35 @@ select {
   border-radius: 0;
 }
 
-div{
 
-  margin: auto;
+/* Reset CSS */
 
-}
 
-#cube1 {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  width: 400px;
-  height: 400px;
-  background-color: #181b1f;
-
-}
-
-#cube2, #cube3, #cube4, #cube5, #cube6, #cube7, #cube8, #cube9, #cube10 {
-  box-sizing: border-box;
-  align-items: center;
-  /*padding: inherit;*/
-
-}
-
-#cube2 {
-  width: 380px;
-  height: 380px;
-  background-color: #262e36;
-
-}
-
-#cube3 {
-  width: 360px;
-  height: 360px;
-  background-color: #32404e;
-
-}
-
-#cube4 {
-  width: 340px;
-  height: 340px;
-  background-color: #45617e;
-
-}
-
-#cube5 {
-  width: 320px;
-  height: 320px;
-  background-color: #46719e;
-
-}
-
-#cube6 {
-  width: 300px;
-  height: 300px;
-  background-color: #43c0b6;
-
-}
-
-#cube7 {
-  width: 280px;
-  height: 280px;
-  background-color: #45a19a;
-
-}
-
-#cube8 {
-  width: 260px;
-  height: 260px;
-  background-color: #3f7974;
-
-}
-
-#cube9 {
-  right: 0;
-  bottom: 0;
-  width: 240px;
-  height: 240px;
-  background-color: #375c59;
-
-}
-
-#cube10 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 220px;
-  width: 220px;
-  background-color: #253635;
-}
 
 section {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  border-bottom: 1px solid #201b10;
+  align-items: center;
+  min-height: 100vh;
+  width: auto;
+  background-color: rgba(20, 61, 27, 0.404);
+  border-bottom: 3px solid black;
+  text-align: center;
+
+  display: flex;
+  justify-content: center;
 }
 
-section button {
-  position: absolute;
-  right: 30px;
-  bottom: 30px;
+button {
+border: 3px solid black;
+}
 
-  width: 200px;
-  height: 60px;
-  background-color: aliceblue;
+#box {
+  border: 3px solid black;
+}
 
+section.background-holder img {
+  display: block;
+  width: 100%;
+  height: 100vh;
+  background-size: contain;
 
 }
