--- a/frontend/style.css
+++ b/frontend/style.css
@@ -35,7 +35,7 @@ select {
 /* Reset CSS */
 
 body {
-  font-family: 'Supermercado One', cursive;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 15px;
   background-color: #050f11;
 }
