--- a/frontend/style.css
+++ b/frontend/style.css
@@ -34,10 +34,27 @@ select {
 
 /* Reset CSS */
 
+html {
+  scroll-behavior: smooth;
+  
+}
+
 body {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 15px;
   background-color: #050f11;
+  
+}
+
+header{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  z-index: 99;
+  text-align: center;
+  background-color: rgba(0, 44, 0, 0.192);
 }
 
 h1 {
