--- a/frontend/style.css
+++ b/frontend/style.css
@@ -55,6 +55,8 @@ header{
   z-index: 99;
   text-align: center;
   background-color: rgba(0, 44, 0, 0.192);
+  font-size: 30px;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 h1 {
